# cdgs-tools

./: .gitignore  LICENSE  pyproject.toml
src/cdgs_tools/: cdgs_class.py  cdgs_filter.py  cdgs_merge.py  cdgs_node_class.py  cdgs_pipes2vtk.py  cdgs_stl_filter.py
src/cdgs_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: CVBD_N16.DGS  CVBD_N16_test.DGS  CVBD_N16_test.vtk
